--- a/exportParquet.tableplusplugin/package.json
+++ b/exportParquet.tableplusplugin/package.json
@@ -4,15 +4,25 @@
 	"description": "Export your table to a Parquet file",
 	"main": "main.js",
 	"devDependencies": {
-		"babel-core": "^6.25.0",
-		"babel-loader": "^7.1.1",
-		"babel-preset-es2015": "^6.24.1",
-		"webpack": "^4.41.5",
-		"webpack-cli": "^3.3.10",
-		"parquetjs": "^1.0"
+		"@babel/core": "^7.18.2",
+		"babel-loader": "*",
+		"babel-preset-env": "*",
+		"core-js": "*",
+		"parquetjs": "^0.11.2",
+		"webpack": "*",
+		"webpack-cli": "*"
+	},
+	"dependencies": {
+		"@babel/polyfill": "^7.12.1",
+		"parquetjs": "^0.11.2"
 	},
 	"scripts": {
 		"build": "webpack"
+	},
+	"babel": {
+		"preset": [
+			"env"
+		]
 	},
 	"keywords": [],
 	"author": "http://summerlin.co",
